force-app/main/default/objects/EMS_LM_Leave_History__c/EMS_LM_Leave_History__c.object-meta.xml
<CustomObject>
    <description>It will show the employee Leave and WFH Requests.</description>
    <label>Leave Request</label>
    <nameField>
        <displayFormat>LH-{00000}</displayFormat>
        <label>Leave History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>