force-app/main/default/objects/EMS_LM_Leave_History__c/fields/Approver_2_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_2_Rejection_Comments__c</fullName>
    <label>Approver 2 Rejection Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>