force-app/main/default/objects/EMS_LM_Leave_History__c/fields/canceldby__c.field-meta.xml
<CustomField>
    <fullName>canceldby__c</fullName>
    <label>canceldby</label>
    <length>80</length>
    <type>Text</type>
</CustomField>