force-app/main/default/objects/EMS_LM_Leave_History__c/fields/contactresourcerole__c.field-meta.xml
<CustomField>
    <fullName>contactresourcerole__c</fullName>
    <formula>EMS_LM_Contact__r.Resource_Role__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contactresourcerole</label>
    <type>Text</type>
</CustomField>