force-app/main/default/objects/EMS_LM_Leave_History__c/fields/Current_Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Leave_Balance__c</fullName>
    <label>Current Leave Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>