force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Approved_On__c</fullName>
    <label>Approved On</label>
    <type>Date</type>
</CustomField>