force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Approver__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leaves_History</relationshipName>
    <type>Lookup</type>
</CustomField>