force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Auto_Approve__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Auto_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Approve</label>
    <type>Checkbox</type>
</CustomField>