force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Contact__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leaves History</relationshipLabel>
    <relationshipName>Leaves_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>