force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Current_Approver__c</fullName>
    <description>This field is used to populate current approver details and rejected approver details.</description>
    <label>Current Approver</label>
    <length>150</length>
    <type>Text</type>
</CustomField>