force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Day__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Day__c</fullName>
    <label>Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>First Half</fullName>
            </value>
            <value>
                <fullName>Second Half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>