force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Final_Approver__c</fullName>
    <formula>if(NOT(ISBLANK(Approver_3__c)), Approver_3__r.FirstName+&apos; &apos;+ Approver_3__r.LastName,If(NOT(ISBLANK(EMS_LM_2nd_Approver__c)), EMS_LM_2nd_Approver__r.FirstName+&apos; &apos;+ EMS_LM_2nd_Approver__r.LastName, EMS_LM_Approver__r.FirstName+&apos; &apos;+ EMS_LM_Approver__r.LastName ) )</formula>
    <label>Final Approver</label>
    <type>Text</type>
</CustomField>