force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Leave_Duration__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Leave_Duration__c</fullName>
    <label>Leave Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>