force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Leave_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Leave_End_Date__c</fullName>
    <label>Leave End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>