force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Leave_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Type</label>
    <referenceTo>EMS_LM_Leave__c</referenceTo>
    <relationshipLabel>Leaves History</relationshipLabel>
    <relationshipName>Leaves_History</relationshipName>
    <type>Lookup</type>
</CustomField>