force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Leave_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Leave_Type_Name__c</fullName>
    <label>Leave Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Paternity Leave</fullName>
            </value>
            <value>
                <fullName>Bereavement Leave</fullName>
            </value>
            <value>
                <fullName>Loss of Pay</fullName>
            </value>
            <value>
                <fullName>Work From Home</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Compensatory Off</fullName>
            </value>
            <value>
                <fullName>Marriage Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>