force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Reason__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Reason__c</fullName>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>