force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>