force-app/main/default/objects/EMS_LM_Leave_History__c/fields/EMS_LM_Status__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Approver 2 Pending</fullName>
            </value>
            <value>
                <fullName>Approver 1 Pending</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>Waiting For Approver 3</fullName>
                <isActive>false</isActive>
                <label>Waiting For Approver 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>