force-app/main/default/objects/EMS_LM_Leave_History__c/fields/Level_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Approval__c</fullName>
    <label>Level of Approval</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>