force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Annual_Leave_insufficient_balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Leave_insufficient_balance</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(EMS_LM_Leave_Type__r.EMS_LM_Leave_Type__c, &apos;Annual Leave&apos;),
EMS_LM_Leave_Type__r.EMS_LM_No_Of_Leaves__c &gt; Current_Leave_Balance__c + 5)</errorConditionFormula>
    <errorMessage>Insufficient Leave Balance</errorMessage>
</ValidationRule>