force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Annual_Leave_Insufficient_Leave_Balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Leave_Insufficient_Leave_Balance</fullName>
    <active>true</active>
    <errorConditionFormula>EMS_LM_Contact__r.EMS_LM_No_Of_Availble_Leaves__c   &lt;=-5</errorConditionFormula>
    <errorMessage>You don&apos;t have enough leave balance. Consider applying for leave of some other type.</errorMessage>
</ValidationRule>