force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Apply_leave_before48_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Apply_leave_before48_hours</fullName>
    <active>false</active>
    <description>A leave should be applied 48 hours earlier, so if an employee is applying for leave on an nth day for Comp off, the employee can take leave from (n+2) the day.</description>
    <errorConditionFormula>AND(ISPICKVAL( EMS_LM_Leave_Type_Name__c , &apos;Compensatory off&apos;),( EMS_LM_Leave_Start_Date__c -  TODAY() )&lt; 2) || AND(ISPICKVAL( EMS_LM_Leave_Type_Name__c , &apos;Paternity Leave&apos;),( EMS_LM_Leave_Start_Date__c -  TODAY() )&lt; 2)</errorConditionFormula>
    <errorMessage>&quot;Leave to be applied before 48Hrs&quot;</errorMessage>
</ValidationRule>