force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Bereavement_leave_duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Bereavement_leave_duration</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(EMS_LM_Leave_Type__r.EMS_LM_Leave_Type__c, &apos;Bereavement Leave&apos;),
 EMS_LM_Leave_Duration__c  &gt;(5))</errorConditionFormula>
    <errorMessage>Bereavement leave balance is 5, consider applying annual leave for remaining days, if the leave is for more than 5 days</errorMessage>
</ValidationRule>