force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Insufficient_leave_balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Insufficient_leave_balance</fullName>
    <active>false</active>
    <description>Insufficient leave balance</description>
    <errorConditionFormula>AND(ISPICKVAL(EMS_LM_Leave_Type__r.EMS_LM_Leave_Type__c, &apos;Bereavement Leave&apos;),
 EMS_LM_Leave_Type__r.EMS_LM_No_Of_Leaves__c  &gt;  Current_Leave_Balance__c + 10)</errorConditionFormula>
    <errorMessage>Insufficient Leave Balance</errorMessage>
</ValidationRule>