force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Leave_Days_Shouldnot_Exceed_5Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Days_Shouldnot_Exceed_5Days</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 OR(ISPICKVAL(EMS_LM_Leave_Type__r.EMS_LM_Leave_Type__c, &apos;Paternity Leave&apos;), ISPICKVAL(EMS_LM_Leave_Type_Name__c, &apos;Paternity Leave&apos;)),
 EMS_LM_Leave_Duration__c  &gt; 5)</errorConditionFormula>
    <errorMessage>Paternity leave balance is 5, consider applying annual leave for remaining days, if the leave is for more than 5 days</errorMessage>
</ValidationRule>