force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Leave_End_Date_Greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_End_Date_Greater_than_Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>EMS_LM_Leave_Start_Date__c  &gt;  EMS_LM_Leave_End_Date__c</errorConditionFormula>
    <errorMessage>Please Select Leave End Date &quot;Greater or Equal&quot; to Leave Start Date</errorMessage>
</ValidationRule>