force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Leave_Limit_Exceeded.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Limit_Exceeded</fullName>
    <active>false</active>
    <description>Insufficient Leave Balance</description>
    <errorConditionFormula>AND(ISPICKVAL(EMS_LM_Leave_Type__r.EMS_LM_Leave_Type__c, &apos;Maternity Leave&apos;),
EMS_LM_Leave_Type__r.EMS_LM_No_Of_Leaves__c &gt; Current_Leave_Balance__c + 187)</errorConditionFormula>
    <errorMessage>Insufficient Leave Balance</errorMessage>
</ValidationRule>