force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/LOP_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LOP_Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(  EMS_LM_Leave_Type__r.EMS_LM_Leave_Type__c , &apos;Loss Of Pay&apos;),  EMS_LM_Leave_Start_Date__c &lt;= DATEVALUE(CreatedDate ) + 2 )</errorConditionFormula>
    <errorMessage>Loss of Pay must be applied at least 2 days prior.</errorMessage>
</ValidationRule>