force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/LossOfPay.validationRule-meta.xml
<ValidationRule>
    <fullName>LossOfPay</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(EMS_LM_Leave_Type__r.EMS_LM_Leave_Type__c, &apos;Loss Of Pay&apos;),
 Current_Leave_Balance__c &gt;(-5))</errorConditionFormula>
    <errorMessage>&quot;Loss Of Pay&quot; cannot be applied.</errorMessage>
</ValidationRule>