force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Restrict_Annual_Leaves_Upto.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Annual_Leaves_Upto</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(EMS_LM_Status__c, &apos;Approved&apos;), EMS_LM_Contact__r.EMS_LM_No_Of_Availble_Leaves__c &lt;= -5)</errorConditionFormula>
    <errorMessage>Not enough Balance</errorMessage>
</ValidationRule>