force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/Restricted_To_Apply_Maternity_Leave.validationRule-meta.xml
<ValidationRule>
    <fullName>Restricted_To_Apply_Maternity_Leave</fullName>
    <active>true</active>
    <description>To Avail of Maternity Leave Please Email HR before 8 Weeks and Get it Enabled</description>
    <errorConditionFormula>AND(
 ISPICKVAL(EMS_LM_Leave_Type_Name__c, &apos;Maternity Leave&apos;),
  EMS_LM_Contact__r.EMS_LM_Maternity_Leave__c = false
)</errorConditionFormula>
    <errorMessage>To avail the maternity leave, please request your HR. Maternity leave has to be applied eight weeks before the leave start date.</errorMessage>
</ValidationRule>