force-app/main/default/objects/EMS_LM_Leave_History__c/validationRules/RestrictPastLeavesCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictPastLeavesCreation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(EMS_LM_Leave_Start_Date__c)),
    OR(
        EMS_LM_Leave_Start_Date__c &gt;= DATE(YEAR(TODAY()), MONTH(TODAY()) - 1, 1),
        EMS_LM_Leave_Start_Date__c &gt;= TODAY()
    )
)</errorConditionFormula>
    <errorMessage>YOU CAN APPLY LAST MONTH LEAVE ONLY</errorMessage>
</ValidationRule>