force-app/main/default/objects/EMS_LM_Leave_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EMS_LM_Contact__c</columns>
    <columns>EMS_LM_Leave_Type__c</columns>
    <columns>EMS_LM_Leave_Duration__c</columns>
    <columns>EMS_LM_Status__c</columns>
    <columns>EMS_LM_Reason__c</columns>
    <columns>EMS_LM_Current_Approver__c</columns>
    <columns>EMS_LM_Approver__c</columns>
    <columns>EMS_LM_2nd_Approver__c</columns>
    <columns>Approver_1_Approved_Comments__c</columns>
    <columns>Approver_2_Approved_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>