force-app/main/default/objects/EMS_LM_Leave_History__c/listViews/Annual_Leave.listView-meta.xml
<ListView>
    <fullName>Annual_Leave</fullName>
    <columns>NAME</columns>
    <columns>EMS_LM_Contact__c</columns>
    <columns>EMS_LM_Leave_Type__c</columns>
    <columns>EMS_LM_Leave_Duration__c</columns>
    <columns>EMS_LM_Status__c</columns>
    <columns>EMS_LM_Reason__c</columns>
    <columns>EMS_LM_Current_Approver__c</columns>
    <columns>EMS_LM_Approver__c</columns>
    <columns>EMS_LM_2nd_Approver__c</columns>
    <columns>EMS_LM_Leave_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EMS_LM_Leave_Type__c</field>
        <operation>equals</operation>
        <value>Annual Leave</value>
    </filters>
    <label>Annual Leave</label>
</ListView>