force-app/main/default/objects/EMS_LM_Leave_History__c/listViews/Pending_Leave_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Leave_Requests</fullName>
    <columns>NAME</columns>
    <columns>EMS_LM_Contact__c</columns>
    <columns>EMS_LM_Current_Approver__c</columns>
    <columns>EMS_LM_Leave_Type_Name__c</columns>
    <columns>EMS_LM_Leave_Type__c</columns>
    <columns>EMS_LM_Status__c</columns>
    <columns>EMS_LM_Reason__c</columns>
    <columns>EMS_LM_Approver__c</columns>
    <columns>EMS_LM_2nd_Approver__c</columns>
    <columns>Approver_3__c</columns>
    <columns>Approver_1_Approved_Comments__c</columns>
    <columns>EMS_LM_Leave_Duration__c</columns>
    <columns>EMS_LM_Leave_Start_Date__c</columns>
    <columns>EMS_LM_Leave_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EMS_LM_Status__c</field>
        <operation>equals</operation>
        <value>Pending,Approver 2 Pending,Approver 1 Pending</value>
    </filters>
    <label>Pending</label>
</ListView>